# vidveil

./: .gitignore  NATIVE_RECORDING_PLAN.md  README.md  TASKS.md  prd.md
.cursor/: mcp.json
clipforge/: .cursorrules  .env.example  .gitignore  BREAKTHROUGH.md  COMPLETE.md  DEVLOG.md  NATIVE_RECORDING_IMPLEMENTATION.md  NATIVE_RECORDING_STATUS.md  NEXT_STEPS.md  PROGRESS.md  README.md  TASKS.md  check-recording-status.sh  dbuild.sh  nuxt.config.ts  package.json  playwright.config.ts  test-native-recording.sh  tsconfig.json
clipforge/.cursor/: mcp.json
clipforge/app/: app.config.ts  app.vue
clipforge/app/composables/: pages.ts  useAI.ts  useAudioCapture.ts  useAudioPeaks.ts  useAuth.ts  useClipArrangement.ts  useClipEditing.ts  useClips.ts  useExport.ts  useFFmpeg.ts  useMedia.ts  useMediaPipe.ts  useNativeRecording.ts  useNativeVideoExport.ts  usePipMask.ts  (+16 more)
clipforge/docs/: DEV_MODE_GUIDE.md  mcp-setup.md  mcp-usage-guide.md  supabase-schema.sql
clipforge/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  video_processing.d
clipforge/src-tauri/capabilities/: main.json
clipforge/src-tauri/src/: lib.rs  main.rs
clipforge/src-tauri/src/commands/: macos_capture.rs  media.rs  mod.rs  recording.rs  screen_capture.rs  video_processing.rs  window.rs
clipforge/src-tauri/src/objc/: screen_capture.m  video_export.m
clipforge/types/: global.d.ts  project.ts
clipforge/utils/: animation-easing.ts  audio-processing.ts  clip-operations.ts  export-presets.ts  keyboard-shortcuts.ts  positioning.ts  shapes.ts  svg-generator.ts  sync.ts
(+61 files in other folders)
