[package]
name = "nuxtor"
version = "1.5.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2.8", features = ["devtools"] }
tauri-plugin-shell = "2.3"
tauri-plugin-notification = "2.3"
tauri-plugin-os = "2.3"
tauri-plugin-fs = "2.4"
tauri-plugin-store = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
lazy_static = "1.4"
regex = "1.0"

# macOS screen capture dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
cocoa = "0.25"
core-foundation = "0.9"
core-graphics = "0.23"
dispatch = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
